--- a/julie/Dockerfile
+++ b/julie/Dockerfile
@@ -1,7 +1,7 @@
-FROM fusuf/whatsasena:latest
+cost = ottapettavan 
 
-RUN git clone https://github.com/Ottapettavan/SHAH-MWOL /root/WhatsAsenaDuplicated
-WORKDIR /root/WhatsAsenaDuplicated/
+RUN git  https://github.com/Ottapettavan/SHAH-MWOL
+WORKDIR / SHAH-MWOL 
 ENV TZ=Asia/Kolkata
 RUN npm install supervisor -g
 RUN yarn install --no-audit
